--- a/src/app/app/home/home.component.html
+++ b/src/app/app/home/home.component.html
@@ -1,4 +1,29 @@
-<div class="container-menu">
-    <app-side-bar/>
-    <app-menu-lateral/>
+<div class="home-container">
+    <div class="small-size flex-column gap-4">
+        <div class="side-bar-container">
+            <app-side-bar/>
+        </div>
+        <div ></div>
+        <div class="menu-perfil-container">
+            <app-menu-perfil class="d-flex justify-content-center"/>
+        </div>
+        <div class="conteudo-princial-container">
+
+        </div>
+        
+    </div>
+
+    <div class="full-size list-group">
+        <div class="list-group-item justify-content-between grid">
+            <div class="g-col-8 me-auto">
+            </div>
+            <div class="g-col-4 ms-auto">
+                <div>
+                </div>
+                <div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
