--- a/src/app/app/home/menu-perfil/menu-perfil.component.scss
+++ b/src/app/app/home/menu-perfil/menu-perfil.component.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     flex-direction: column ;
     background-color: rgb(22,22,22);
+    border-radius: 40px;
     border: 1px solid rgb(48,48,51);
     padding: 50px;
     gap: 30px;
