--- a/src/app/pages/projeto-spotify/header/header.component.html
+++ b/src/app/pages/projeto-spotify/header/header.component.html
@@ -11,13 +11,13 @@
             <i class="bi bi-search"></i>
             <input 
                 id="search-input"
-                maxLength="800"
+                maxLength="15"
                 autocomplete="off"
                 placeholder="O que você quer ouvir?"
                 />
         </div>
         <div class="login">
-            <button class="subscribe">Increva-se</button>
-            <button class="login">Entrar</button>
+            <button class="subscribe-btn">Increva-se</button>
+            <button class="login-btn">Entrar</button>
         </div>
 </div>
