--- a/src/app/pages/projeto-spotify/header/header.component.scss
+++ b/src/app/pages/projeto-spotify/header/header.component.scss
@@ -6,14 +6,18 @@
     margin: 15px;
     border-radius: 8px;
     background-color: #121212;
-    max-width: 78vW;
-    margin-left: 23vw;
+    max-width: 80vW;
+    margin-left: 330px;
+    overflow: hidden;
 
     .navigation {
         display: flex;
         justify-content: space-around;
         align-items: center;
-
+        
+        .arrow-left {
+            margin-right: 20px;
+        }
         .arrow-right,
         .arrow-left {
             display: flex;
@@ -21,11 +25,82 @@
             justify-content: center;
             width: 32px;
             height: 32px;
-            background: #131313;
+            background: #242424;
             border-radius: 50%;
             border: none;
             cursor: pointer;
             
+            i {
+                color: white;
+            }
+            
+        }
+    }
+
+    .search {
+        display: flex;
+        align-items: center;
+        width: 364px;
+        height: 48px;
+        background-color: #242424;
+        border-radius: 50px;
+        border: 1px solid transparent;
+        transition: .5s ease;
+        i {
+            color: white;
+            width: 16px;
+            height: 16px;
+            margin-left: 20px;
+            margin-bottom: 3px;
+        }
+
+        input {
+            background: transparent;
+            border: none;
+            padding: 0 0 0 12px;
+            color: white;
+            text-overflow: ellipsis;
+            white-space: none;
+            outline: none;
+        }
+        
+    }
+
+    .search:hover {
+        border: 1px solid #fff;
+        cursor: pointer;
+    }
+
+    .login {
+        display: flex;
+        align-items: center;
+        
+        button {
+            font-size: 16px;
+            font-weight: 700;
+            cursor: pointer;
+            transition: .5s;
+            border: none
+        }
+        .subscribe-btn {
+            color: #a7a7a7;
+            background: transparent;
+            margin-right: 32px;
+        }
+        .subscribe-btn:hover {
+            transform: scale(1.04);
+            color: #fff;
+        }
+        .login-btn {
+            color: black;
+            width: 100px;
+            height: 48px;
+            border-radius: 40px;
+
+        }
+        
+        .login-btn:hover {
+            transform: scale(1.04);
         }
     }
 }
