--- a/src/app/pages/projeto-spotify/sidebar/sidebar.component.html
+++ b/src/app/pages/projeto-spotify/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <nav class="navigation">
         <div class="logo">
             <a href="#">
-                <img src="" alt="logo do spotify">
+                <img src="assets/img/playlist-card/logo-spotify.png" alt="logo do spotify">
             </a>
         </div>
     
@@ -22,7 +22,7 @@
         </ul>
     </nav>
 
-    <div class="library">
+    <div class="library" id="scrollbar">
         <div class="library-content">
             <button class="library-button">
                 <i class="bi bi-journal"></i>
@@ -56,7 +56,7 @@
         </div>
     
         <div class="lang">
-            <button class="buttom">
+            <button class="lang-buttom">
                 <i class="bi bi-globe-americas"></i>
                 <span>Português do Brasil</span>
             </button>
