--- a/src/app/pages/projeto-spotify/main/main.component.html
+++ b/src/app/pages/projeto-spotify/main/main.component.html
@@ -9,7 +9,7 @@
                 <a href="#" class="card">
                     <div class="card card1">
                         <img src="assets/img/playlist-card/1.jpeg" alt="">
-                        <span></span>
+                        <span>teste</span>
                     </div>
                 </a>
             </section>
